--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body{
 }
 .display{
   flex-wrap: wrap;
-  height: 20%;
+  height: 30%;
   margin: 5%;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.596);
@@ -69,12 +69,13 @@ body{
 .digits{
   flex-wrap: wrap;
   margin-top: 10%;
-  height: 70%;
+  height: 60%;
   width: 100%;
   display: flex;
   justify-content: center;
-  
+  flex-direction: column;
 }
+
 .buttons{
   background: rgba(255, 255, 255, 0.596);
   border: 0;
@@ -82,11 +83,76 @@ body{
   flex: 1 0 19%;
   font-size: larger;
   color: rgb(39, 39, 39);
+  margin: 2.6%; 
+  width: 20%;
+  height: 15%;
+  font-family: 'Libre Franklin', sans-serif;
+  cursor: pointer;
+}
+.buttonsEsp{
+  background: #ADE2FF;
+  border: 0;
+  border-radius: 20px;
+  
+  font-size: larger;
+  color: #109DFF;
   margin: 3%; 
   width: 20%;
   height: 15%;
   font-family: 'Libre Franklin', sans-serif;
   cursor: pointer;
+}
+.Numbers{
+  width: 100%;
+  height: 100%;
+
+}
+.buttonsEspLeft{
+  background: #ADE2FF;
+  border: 0;
+  border-radius: 20px;
+  
+  font-size: larger;
+  color: #109DFF;
+  margin-bottom: 3%;
+  width: 20%;
+  height: 16.5%;
+  font-family: 'Libre Franklin', sans-serif;
+  cursor: pointer;
+}
+.buttonsLeft{
+  background: #ADE2FF;
+  border: 0;
+  border-radius: 20px;
+  margin-bottom: 3%;
+  font-size: larger;
+  color: #109DFF; 
+  width: 20%;
+  height: 30%;
+  font-family: 'Libre Franklin', sans-serif;
+  cursor: pointer;
+}
+.button0{
+  background: rgba(255, 255, 255, 0.596);
+  border: 0;
+  border-radius: 20px;
+  flex: 1 0 19%;
+  font-size: larger;
+  color: rgb(39, 39, 39);
+  margin: 3%; 
+  width: 44%;
+  height: 15%;
+  font-family: 'Libre Franklin', sans-serif;
+  cursor: pointer;
+}
+.operations{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin-top: 3%;
+  flex-direction: column;
+  position: relative;
+  right: 22%;
 }
 .buttons:hover{
   background: rgba(255, 255, 255, 0.863);
